[gd_scene load_steps=21 format=3 uid="uid://cm35eskp0o7ah"]

[ext_resource type="Script" path="res://fps/fps.gd" id="1_fssuy"]
[ext_resource type="Texture2D" uid="uid://cu15jqtsbg4t3" path="res://Images/cursor0.png" id="2_6bq6q"]
[ext_resource type="Texture2D" uid="uid://dvflpekblut54" path="res://Images/cursor1.png" id="3_y2nbq"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_xwnqa"]
radius = 0.225

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bm48d"]
radius = 0.215
height = 0.895

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fvg5h"]
radius = 0.215
height = 1.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oht2h"]
shading_mode = 0
albedo_color = Color(0.916417, 0.472688, 0.543104, 1)

[sub_resource type="BoxMesh" id="BoxMesh_qqwbl"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qqwbl"]
shading_mode = 0
albedo_color = Color(0.66923, 0.211426, 0.972398, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6ppju"]
shading_mode = 0
albedo_color = Color(0.869707, 0.499802, 0.288593, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hslgj"]
shading_mode = 0
albedo_color = Color(0.602592, 0.157847, 0.254453, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7045e"]
shading_mode = 0
albedo_color = Color(0.800962, 0.190683, 0.411689, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lpbiu"]
shading_mode = 0
albedo_color = Color(0.17648, 0.509571, 0.456537, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g0wpq"]
shading_mode = 0
albedo_color = Color(0.435833, 0.520576, 0.24723, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sy4b7"]
shading_mode = 0
albedo_color = Color(0.0835371, 0.457642, 0.552589, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_63oec"]
shading_mode = 0
albedo_color = Color(0.379116, 0.464699, 0.445347, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xujkk"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b60sg"]
bg_color = Color(0.295867, 0.295866, 0.295866, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hx18i"]
texture = ExtResource("2_6bq6q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_unico"]
texture = ExtResource("3_y2nbq")

[node name="fps" type="CharacterBody3D"]
script = ExtResource("1_fssuy")

[node name="stand" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.993943, 0)
shape = SubResource("CapsuleShape3D_xwnqa")

[node name="crawling" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.445113, 0)
shape = SubResource("CapsuleShape3D_bm48d")

[node name="duck" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.643902, 0)
shape = SubResource("CapsuleShape3D_fvg5h")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.966, 0)

[node name="standCam" type="Camera3D" parent="head"]
fov = 90.0

[node name="hitRay" type="RayCast3D" parent="head/standCam"]
target_position = Vector3(0, 0, -3)

[node name="hand0" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand0"]
transform = Transform3D(0.193973, 0, 0, 0, 0.193973, 0, 0, 0, 0.193973, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_oht2h")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand1" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand1"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_qqwbl")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand2" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand2"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_6ppju")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand3" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand3"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_hslgj")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand4" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand4"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_7045e")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand5" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand5"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_lpbiu")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand6" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand6"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_g0wpq")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand7" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand7"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_sy4b7")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand8" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand8"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_63oec")
mesh = SubResource("BoxMesh_qqwbl")

[node name="hand9" type="Node3D" parent="head/standCam/hitRay"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38, -1.275)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="head/standCam/hitRay/hand9"]
transform = Transform3D(0.194, 0, 0, 0, 0.194, 0, 0, 0, 0.194, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_qqwbl")
mesh = SubResource("BoxMesh_qqwbl")

[node name="headRay" type="Node3D" parent="."]

[node name="r0" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.970088, 0.235381, -0.0593639, -0.242752, 0.940634, -0.237231, 0, 0.244546, 0.969638, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="r1" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.970088, 0.235497, 0.0589037, -0.242752, 0.941096, 0.235392, 0, -0.24265, 0.970114, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="r2" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.970088, 0.242731, -0.00314787, -0.242752, 0.970007, -0.0125796, 0, 0.0129674, 0.999916, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="r3" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.9698, -0.236497, 0.0596454, 0.243903, 0.940354, -0.237161, 0, 0.244546, 0.969638, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="r4" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.9698, -0.236614, -0.059183, 0.243903, 0.940816, 0.235322, 0, -0.24265, 0.970114, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="r5" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.9698, -0.243882, 0.00316279, 0.243903, 0.969718, -0.0125758, 2.2608e-10, 0.0129674, 0.999916, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="r6" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.999999, -0.00155319, 2.01422e-05, 0.00150747, 0.967231, -0.253893, 0.000374878, 0.253893, 0.967232, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="r7" type="RayCast3D" parent="headRay"]
transform = Transform3D(0.999999, -0.00155319, 2.01422e-05, 0.00149909, 0.96836, 0.249552, -0.000407124, -0.249552, 0.968361, 0, 0.885626, 0)
target_position = Vector3(0, 1.295, 0)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="speed" type="Label" parent="UI"]
layout_mode = 0
offset_left = 11.0
offset_top = 9.0
offset_right = 194.0
offset_bottom = 32.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xujkk")
text = "ss"

[node name="fps" type="Label" parent="UI"]
layout_mode = 0
offset_left = 11.0
offset_top = 103.0
offset_right = 194.0
offset_bottom = 126.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xujkk")
text = "ss"

[node name="handCheck" type="Label" parent="UI"]
layout_mode = 0
offset_left = 11.0
offset_top = 132.0
offset_right = 194.0
offset_bottom = 155.0
theme_override_styles/normal = SubResource("StyleBoxFlat_xujkk")
text = "ss"

[node name="fov" type="Label" parent="UI"]
layout_mode = 0
offset_left = 11.0
offset_top = 39.0
offset_right = 182.0
offset_bottom = 65.0
theme_override_styles/normal = SubResource("StyleBoxFlat_b60sg")
text = "ss"

[node name="hit" type="Label" parent="UI"]
layout_mode = 0
offset_left = 11.0
offset_top = 71.0
offset_right = 182.0
offset_bottom = 97.0
theme_override_styles/normal = SubResource("StyleBoxFlat_b60sg")
text = "ss"

[node name="cursor" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_hx18i")

[node name="cursor_raycast" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_unico")

[node name="settings" type="Window" parent="UI"]
position = Vector2i(365, 70)
size = Vector2i(730, 530)
visible = false

[node name="ScrollContainer" type="ScrollContainer" parent="UI/settings"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="UI/settings/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UI/settings/ScrollContainer/HBoxContainer"]
layout_mode = 2
text = "Music Volume"

[node name="HSlider" type="HSlider" parent="UI/settings/ScrollContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
